fix(waybar): Added shadow for better visibility

--- a/waybar/style.css
+++ b/waybar/style.css
@@ -121,7 +121,8 @@ window#waybar {
 #custom-playerctl {
   padding: 2 8;
   border-radius: 9 0 0 9;
-  color: #ea76cb;
+  color: #dd7878;
+  text-shadow: 1px 1px 2px #4c4f69;
   transition: all 0.3s ease;
 }
 
